fix(component): get rid of horizontal scroll

--- a/src/app/features/admin/features/stations/components/stations.component.scss
+++ b/src/app/features/admin/features/stations/components/stations.component.scss
@@ -1,13 +1,30 @@
 .stations {
-  width: 600px;
-  margin: 0 auto;
-  padding: 1rem;
+  &_wrapper {
+    width: 90vw;
+    margin: 0 auto;
+  }
 
-  .station-list {
+  &_station-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
     justify-content: center;
+  }
+
+  &_title {
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
+
+  &_desction {
+    width: 100%;
+    word-wrap: break-word;
+    white-space: initial;
+  }
+
+  &_coordinates {
+    display: flex;
+    flex-direction: column;
   }
 }
